--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.6",
     "expo-web-browser": "~14.1.6",
-    "nativewind": "latest",
+    "nativewind": "4.0.36",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
