--- a/package.json
+++ b/package.json
@@ -46,14 +46,13 @@
     "clsx": "^2.1.1",
     "expo": "^53.0.11",
     "expo-constants": "~17.1.4",
-    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.3",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.6",
     "expo-web-browser": "~14.1.6",
-    "nativewind": "4.0.36",
+    "nativewind": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
