--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "clsx": "^2.1.1",
     "expo": "^53.0.11",
     "expo-constants": "~17.1.4",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.4",
     "expo-router": "~5.0.3",
     "expo-secure-store": "~14.2.3",
